examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E083: nested constructor arm with guard does not guarantee coverage.

data OptionInt {
    SomeI(Int),
    NoneI,
}

data Wrap {
    Boxed(OptionInt),
    Empty,
}

fn score(w: Wrap) -> Int {
    match w {
        Boxed(SomeI(v)) if v > 0 -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
